# ChangeLog for net-misc/drivel
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/drivel/ChangeLog,v 1.22 2006/11/21 20:01:13 beandog Exp $

  21 Nov 2006; Steve Dibb <beandog@gentoo.org> drivel-2.0.2.ebuild:
  amd64 stable, bug 149734

  11 Oct 2006; Bryan Østergaard <kloeri@gentoo.org> metadata.xml:
  Remove obz from metadata due to retiring.

  13 Dec 2005; Luis Medinas <metalgod@gentoo.org> drivel-2.0.2.ebuild:
  Added ~amd64 keyword.

*drivel-2.0.2 (14 Sep 2005)

  14 Sep 2005; Mike Gardiner <obz@gentoo.org> +drivel-2.0.2.ebuild:
  New major version, including support for more than just LiveJournal. Thanks
  to Sourav and Peter on bug #95737

*drivel-1.2.4-r1 (29 Jun 2005)

  29 Jun 2005; John N. Laliberte <allanonjl@gentoo.org>
  -drivel-1.2.3.ebuild, -drivel-1.2.4.ebuild, +drivel-1.2.4-r1.ebuild:
  fix for access violation due to gnome2 eclass change, see bug #92920,
  cleanup old builds

  18 May 2005; Jason Wever <weeve@gentoo.org> drivel-1.2.4.ebuild:
  Added ~sparc keyword.

  26 Mar 2005; Mike Gardiner <obz@gentoo.org> drivel-1.2.1.ebuild,
  drivel-1.2.3.ebuild, drivel-1.2.4.ebuild:
  Added scrollkeeper DEPEND, see bug #86643

*drivel-1.2.4 (02 Feb 2005)

  02 Feb 2005; Joe McCann <joem@gentoo.org> +drivel-1.2.4.ebuild:
  Version bump. I have added the local useflag rhythmbox, which lets drivel
  grab the currently playing song from rhythmbox.

  06 Dec 2004; Joe McCann <joem@gentoo.org> drivel-1.0.2.ebuild,
  drivel-1.2.1.ebuild, drivel-1.2.3.ebuild:
  Changing to real homepage instead of sourceforge project page. Thanks to
  spyderous for the correct link

  06 Dec 2004; Joe McCann <joem@gentoo.org> drivel-1.2.1.ebuild:
  marking x86 stable

*drivel-1.2.3 (06 Dec 2004)

  06 Dec 2004; Joe McCann <joem@gentoo.org> +drivel-1.2.3.ebuild:
  Bugfix release. Added spell useflag for optional gtkspell support

  23 Oct 2004; Alastair Tse <liquidx@gentoo.org> drivel-1.0.2.ebuild,