@@ -1,0 +1,3 @@
+MD5 4ca65e32f5a839bd150c7662a2e9b5e1 drivel-2.0.3.tar.bz2 648882
+RMD160 1f7475472d720ebc80b75345fad5ef0eaa15e6de drivel-2.0.3.tar.bz2 648882
+SHA256 dcfb09c493a90c01f51dd6d559f31db3202118e56a55dcb97abd5a1d8396549c drivel-2.0.3.tar.bz2 648882
