@@ -2,4 +2,8 @@
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
 <herd>gnome</herd>
+<maintainer>
+<email>graaff@gentoo.org</email>
+<name>Hans de Graaff</name>
+</maintainer>
 </pkgmetadata>
