@@ -1,6 +1,13 @@
 # ChangeLog for net-misc/drivel
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/drivel/ChangeLog,v 1.22 2006/11/21 20:01:13 beandog Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/drivel/ChangeLog,v 1.23 2006/12/02 11:23:05 graaff Exp $
+
+*drivel-2.0.3 (02 Dec 2006)
+
+  02 Dec 2006; Hans de Graaff <graaff@gentoo.org> metadata.xml,
+  +drivel-2.0.3.ebuild:
+  Version bump #143808, including dbus support. Add myself as
+  maintainer.
 
   21 Nov 2006; Steve Dibb <beandog@gentoo.org> drivel-2.0.2.ebuild:
   amd64 stable, bug 149734
